# caches-rs

./: Cargo.toml  README-zh_CN.md  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  loc.yml
benches/: arc_cache.rs  lru_cache.rs  segmented_cache.rs  two_queue_cache.rs  wtinylfu_cache.rs
ci/: miri.sh  sanitizer.sh
examples/: adaptive_cache.rs  hit_ratio.rs  lru_cache.rs  raw_lru_custom_callback.rs  segmented_cache.rs  two_queue_cache.rs  wtinylfu_cache.rs
src/: adaptive.rs  cache_api.rs  lfu.rs  lib.rs  lru.rs  macros.rs  polyfill.rs  raw.rs  ristretto.rs  simple_lru.rs  two_queue.rs
src/lfu/: bloom.rs  error.rs  raw.rs  sampled.rs  sketch.rs  tinylfu.rs  wtinylfu.rs
src/lfu/sketch/: impl_core.rs  impl_std.rs
src/lfu/tinylfu/: bloom.rs  error.rs  sketch.rs
src/lfu/tinylfu/sketch/: count_min_row.rs  count_min_sketch_core.rs  count_min_sketch_std.rs
src/lfu/wtinylfu/: error.rs
src/lru/: README.md  adaptive.rs  error.rs  raw.rs  segmented.rs  two_queue.rs
src/raw/: core.rs  iterators.rs  ll.rs
src/ristretto/: bloom.rs  sketch.rs
