[package]
name = "caches"
version = "0.1.7"
authors = ["Al Liu <scygliu1@gmail.com>"]
description = "This is a Rust implementation for HashiCorp's golang-lru. LRUCache, TwoQueueCache and AdaptiveReplacementCache"
homepage = "https://github.com/al8n/caches"
repository = "https://github.com/al8n/caches.git"
documentation = "https://docs.rs/caches/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["lru", "cache", "2q", "arc-cache", "data-structures"]
categories = ["algorithms", "data-structures"]
edition = "2018"


[[bench]]
name = "lru_cache"
harness = false

[[bench]]
name = "two_queue_cache"
harness = false

[[bench]]
name = "arc_cache"
harness = false

[[example]]
name = "hit_ratio"
path = "examples/hit_ratio.rs"

[features]
default = ["hashbrown"]
nightly = ["hashbrown", "hashbrown/nightly"]

[dependencies]
hashbrown = {version = "0.11.2", optional = true}
rand_core = "0.6.3"

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
rand = "0.8.4"
criterion = "0.3.5"
fnv = "1.0.7"
rustc-hash = "1.0"