[package]
name = "caches"
version = "0.2.8"
authors = ["Al Liu <scygliu1@gmail.com>"]
description = "This is a Rust implementation for popular caches (support no_std)."
homepage = "https://github.com/al8n/caches-rs"
repository = "https://github.com/al8n/caches-rs.git"
documentation = "https://docs.rs/caches/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["lru", "cache", "tinylfu", "no_std", "data-structures"]
categories = ["algorithms", "data-structures", "no-std"]
edition = "2018"

[[bench]]
name = "lru_cache"
harness = false

[[bench]]
name = "two_queue_cache"
harness = false

[[bench]]
name = "arc_cache"
harness = false

[[bench]]
name = "segmented_cache"
harness = false

[[bench]]
name = "wtinylfu_cache"
harness = false

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = ["rand", "rand/std", "rand/std_rng", "bitvec/std"]
nightly = ["rand/nightly"]

[dependencies]
bitvec = { version = "1", default-features = false }
hashbrown = { version = "0.14", optional = true }
rand = {version = "0.8", optional = true}

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
criterion = "0.5.1"
fnv = "1.0.7"
rand = "0.8.4"
rustc-hash = "1.0"
cascara = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
